--- a/src/aspace/paging/Makefile
+++ b/src/aspace/paging/Makefile
@@ -1,1 +1,2 @@
-obj-y = paging.o paging_helpers.o
+obj-y = paging.o paging_helpers.o node_struct.o mm_linked_list.o
+# obj-y = paging.o paging_helpers.o
