data structure test

--- a/src/aspace/paging/Makefile
+++ b/src/aspace/paging/Makefile
@@ -1,2 +1,8 @@
-obj-y = paging.o paging_helpers.o node_struct.o mm_linked_list.o mm_splay_tree.o mm_rb_tree.o
+obj-y = paging.o\
+		paging_helpers.o\
+		node_struct.o\
+		mm_linked_list.o\
+		mm_splay_tree.o\
+		mm_rb_tree.o\
+		struct_test.o
 # obj-y = paging.o paging_helpers.o
