--- a/Kconfig
+++ b/Kconfig
@@ -28,7 +28,6 @@ menu "Platform"
 	       that Gem5 gets timers right, but given how slow it is,
 	       it can feel ridiculous in real-time, especially
 	       when used interactively.
-
 	       DO NOT SET THIS IF YOU WANT ACCURATE SIMULATED TIME
 
         config GEM5_APIC_BUS_FREQ_HZ
@@ -1246,7 +1245,7 @@ menu "Address Spaces"
 	  help
 	     Turn on debugging prints for the paging address space abstraction
 
-        config ASPACE_PAGING
+  config ASPACE_PAGING
 	  bool "Paging abstraction"
 	  depends on ASPACES
 	  default y
@@ -1254,6 +1253,65 @@ menu "Address Spaces"
 	     This is the paging address space abstraction.
 	     It does lazy build of identity-mapped page tables, plus
 	     it allows creation of non-identity-mapped addresses
+
+    choice
+      depends on ASPACE_PAGING
+          prompt "Region data structure"
+          default ASPACE_PAGING_REGION_RB_TREE
+
+          config ASPACE_PAGING_REGION_RB_TREE
+              bool "Red Black Tree"
+
+          config ASPACE_PAGING_REGION_SPLAY_TREE
+              bool "Splay Tree"
+      
+          config ASPACE_PAGING_REGION_LINKED_LIST
+              bool "Linked List"
+
+          config ASPACE_PAGING_REGION_SKIP_LIST
+              bool "Skip List"
+    endchoice
+
+    config ASPACE_PAGING_REGION_STRUCT_TEST
+      bool "Test region tracking data structures"
+      depends on ASPACE_PAGING
+      default n
+      help
+        Test red black tree, splay tree, and linked list against each other
+    
+    config ASPACE_PAGING_1GB
+      bool "Huge Page 1GB "
+      depends on ASPACE_PAGING
+      default y
+      help
+        Enable 1GB Huge Page for region aligned with 1GB and length as multiple of 1GB
+
+    config ASPACE_PAGING_2MB
+      bool "Large Page 2MB"
+      depends on ASPACE_PAGING
+      default y
+      help
+        Enable 2MB Large Page for region aligned with 2MB and length as multiple of 2MB
+    
+    config ASPACE_PAGING_PCID
+      bool "PCID for Paging"
+      depends on ASPACE_PAGING
+      default y
+      help
+        Enable PCID support for paging address aspace
+      
+      choice
+        depends on ASPACE_PAGING_PCID
+            prompt "PCID implementation"
+            default ASPACE_PAGING_PCID_QUEUE
+
+            config ASPACE_PAGING_PCID_QUEUE
+                bool "Queue"
+
+            config ASPACE_PAGING_PCID_BITMAP
+                bool "Bitmap"
+      
+    endchoice  
 
 	config DEBUG_ASPACE_PAGING
 	  bool "Debug the paging address space abstraction"
