--- a/src/aspace/paging/Makefile
+++ b/src/aspace/paging/Makefile
@@ -1,9 +1,15 @@
 obj-y = paging.o\
 		paging_helpers.o\
-		node_struct.o\
-		mm_linked_list.o\
-		mm_splay_tree.o\
-		mm_rb_tree.o\
-		struct_test.o \
-		alloc_pcid.o
-# obj-y = paging.o paging_helpers.o
+		node_struct.o
+		 
+
+obj-$(NAUT_CONFIG_ASPACE_PAGING_REGION_RB_TREE) += mm_rb_tree.o
+obj-$(NAUT_CONFIG_ASPACE_PAGING_REGION_SPLAY_TREE) += mm_splay_tree.o
+obj-$(NAUT_CONFIG_ASPACE_PAGING_REGION_LINKED_LIST) += mm_linked_list.o
+
+obj-$(NAUT_CONFIG_ASPACE_PAGING_REGION_STRUCT_TEST) += mm_rb_tree.o
+obj-$(NAUT_CONFIG_ASPACE_PAGING_REGION_STRUCT_TEST) += mm_splay_tree.o
+obj-$(NAUT_CONFIG_ASPACE_PAGING_REGION_STRUCT_TEST) += mm_linked_list.o
+obj-$(NAUT_CONFIG_ASPACE_PAGING_REGION_STRUCT_TEST) += struct_test.o
+
+obj-$(NAUT_CONFIG_ASPACE_PAGING_PCID) += alloc_pcid.o
