CARAT protection check sketch

--- a/.config
+++ b/.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 #Nautilus: 
-# Sun Sep 27 23:20:52 2020
+# Tue Oct 13 00:49:28 2020
 #
 
 #
@@ -36,9 +36,10 @@ NAUT_CONFIG_MAX_THREADS=1024
 NAUT_CONFIG_THREAD_EXIT_KEYCODE=196
 # NAUT_CONFIG_USE_TICKETLOCKS is not set
 # NAUT_CONFIG_PARTITION_SUPPORT is not set
-# NAUT_CONFIG_VIRTUAL_CONSOLE_DISPLAY_NAME is not set
+NAUT_CONFIG_VIRTUAL_CONSOLE_DISPLAY_NAME=y
 # NAUT_CONFIG_VIRTUAL_CONSOLE_CHARDEV_CONSOLE is not set
-# NAUT_CONFIG_VIRTUAL_CONSOLE_SERIAL_MIRROR is not set
+NAUT_CONFIG_VIRTUAL_CONSOLE_SERIAL_MIRROR=y
+NAUT_CONFIG_VIRTUAL_CONSOLE_SERIAL_MIRROR_ALL=y
 
 #
 # Scheduler Options
@@ -150,9 +151,9 @@ NAUT_CONFIG_ASPACE_PAGING_REGION_RB_TREE=y
 # NAUT_CONFIG_ASPACE_PAGING_1GB is not set
 # NAUT_CONFIG_ASPACE_PAGING_2MB is not set
 # NAUT_CONFIG_ASPACE_PAGING_PCID is not set
-# NAUT_CONFIG_DEBUG_ASPACE_PAGING is not set
+NAUT_CONFIG_DEBUG_ASPACE_PAGING=y
 NAUT_CONFIG_ASPACE_CARAT=y
-# NAUT_CONFIG_DEBUG_ASPACE_CARAT is not set
+NAUT_CONFIG_DEBUG_ASPACE_CARAT=y
 
 #
 # Runtimes
